--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link
+    rel="preload"
+    href="src/assets/fonts/MessinaSans/MessinaSans-Regular.woff2"
+    as="font"
+    type="font/woff2"
+    crossorigin="anonymous"
+  />
+  <link
+    rel="preload"
+    href="src/assets/fonts/BrutalType/BrutalType.woff2"
+    as="font"
+    type="font/woff2"
+    crossorigin="anonymous"
+  />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ title }}</title>
 </head>
