--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ title }}</title>
 </head>
+
 <body class="page">
 <div class="page__inner">
-  {{> header/header }}
-  <main></main>
+  <div class="page__wrapper">
+    {{> header/header }}
 
-  <footer></footer>
+    <main x-data class="page__content">
+      {{> content/content}}
+    </main>
+  </div>
+
+  <span>Back</span>
 </div>
 
 <script type="module" src="src/main.js"></script>
