add contents & articles styles

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
 <body class="page">
 <div class="page__inner">
+  <div class="page__back-btn">
+    <a href="#">Back</a>
+  </div>
   <div class="page__wrapper">
     {{> header/header }}
 
@@ -30,8 +33,6 @@
       {{> content/content}}
     </main>
   </div>
-
-  <span>Back</span>
 </div>
 
 <script type="module" src="src/main.js"></script>
